# CoordinatesTransition

./: .gitignore  CMakeLists.txt  CoordinatesFacade.cpp  CoordinatesFacade.h  CoordinatesInterface.cpp  CoordinatesInterface.h  CoordinatesPZ90.cpp  CoordinatesPZ90.h  CoordinatesPZ90UnitTest.cpp  CoordinatesSK42.cpp  CoordinatesSK42.h  CoordinatesSK42UnitTest.cpp  CoordinatesTransition.cpp  CoordinatesTransition.h  CoordinatesTranslation.cpp  CoordinatesTranslation.h  CoordinatesTranslationUnitTest.cpp  CoordinatesWGS84.cpp  CoordinatesWGS84.h  CoordinatesWGS84UnitTest.cpp  README.md  main.cpp
include/: CoordinateConverter.h  CoordinateTypes.h
src/: CoordinateConverter.cpp
tests/: CoordinateTests.cpp
